--- a/public/ride/ride-home.html
+++ b/public/ride/ride-home.html
@@ -26,26 +26,42 @@ async function init(){
     return;
   }
 
-  // Decode token to show user (optional)
-  const payload = JSON.parse(atob(token.split('.')[1]));
-  document.getElementById("greet").innerText = "Hello, User!";
+  // Optional: decode payload safely
+  try{
+    const base64Url = token.split('.')[1];
+    const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+    const payload = JSON.parse(decodeURIComponent(atob(base64).split('').map(function(c) {
+      return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+    }).join('')));
+    document.getElementById("greet").innerText = "Hello, " + (payload.phone || "User") + "!";
+  } catch(e){
+    document.getElementById("greet").innerText = "Hello, User!";
+  }
 
   // Fetch current rides
-  const res = await fetch("/api/ride/my", {
-    headers:{ "Authorization":"Bearer "+token }
-  });
-  const data = await res.json();
-
-  const list = document.getElementById("rideList");
-  list.innerHTML = "";
-  if(data.length === 0){
-    list.innerHTML = "<li>No rides yet</li>";
-  } else {
-    data.forEach(r=>{
-      const li = document.createElement("li");
-      li.innerText = `${r.pickup} → ${r.drop} | Status: ${r.status}`;
-      list.appendChild(li);
+  try{
+    const res = await fetch("/api/ride/my", {
+      headers:{ "Authorization":"Bearer "+token }
     });
+    if(!res.ok) throw new Error("Failed to fetch rides");
+
+    const data = await res.json();
+    const rides = data.rides || data; // depending on backend response
+
+    const list = document.getElementById("rideList");
+    list.innerHTML = "";
+    if(rides.length === 0){
+      list.innerHTML = "<li>No rides yet</li>";
+    } else {
+      rides.forEach(r=>{
+        const li = document.createElement("li");
+        li.innerText = `${r.pickup} → ${r.drop} | Status: ${r.status}`;
+        list.appendChild(li);
+      });
+    }
+  } catch(err){
+    console.error(err);
+    document.getElementById("rideList").innerHTML = "<li>Error loading rides</li>";
   }
 }
 
