--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>AlinGo Ride</title>
-  <link rel="stylesheet" href="css/style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>AlinGo Ride</title>
+
+<style>
+:root{
+  --dark-blue:#0b1c2d;
+  --green:#2ecc71;
+  --light:#f4f6f8;
+}
+
+*{box-sizing:border-box;margin:0;padding:0}
+
+body{
+  font-family: "Segoe UI", system-ui, sans-serif;
+  background:var(--light);
+  display:flex;
+}
+
+/* ================= SIDEBAR ================= */
+.sidebar{
+  width:240px;
+  background:var(--dark-blue);
+  color:#fff;
+  height:100vh;
+  padding:20px;
+}
+
+.logo{
+  font-size:24px;
+  font-weight:700;
+  color:var(--green);
+  margin-bottom:30px;
+}
+
+.menu a{
+  display:block;
+  padding:14px 12px;
+  margin-bottom:10px;
+  border-radius:8px;
+  color:#fff;
+  text-decoration:none;
+  transition:.2s;
+}
+
+.menu a:hover,
+.menu a.active{
+  background:var(--green);
+  color:#0b1c2d;
+}
+
+/* ================= MAIN ================= */
+.main{
+  flex:1;
+  padding:30px;
+}
+
+.header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:30px;
+}
+
+.profile{
+  background:#fff;
+  padding:12px 18px;
+  border-radius:10px;
+  box-shadow:0 5px 15px rgba(0,0,0,.08);
+}
+
+/* ================= HOME ================= */
+.hero{
+  background:linear-gradient(135deg,var(--dark-blue),#122c46);
+  color:#fff;
+  padding:40px;
+  border-radius:18px;
+  margin-bottom:30px;
+}
+
+.hero h1{
+  font-size:36px;
+  margin-bottom:10px;
+}
+
+.hero p{
+  opacity:.9;
+}
+
+/* ================= SERVICES ================= */
+.services{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
+
+.card{
+  background:#fff;
+  padding:25px;
+  border-radius:16px;
+  box-shadow:0 8px 20px rgba(0,0,0,.08);
+}
+
+.card h3{
+  margin-bottom:10px;
+}
+
+.card button{
+  margin-top:15px;
+  width:100%;
+  padding:12px;
+  border:none;
+  border-radius:8px;
+  background:var(--green);
+  font-size:16px;
+  font-weight:600;
+  cursor:pointer;
+}
+
+.card button:hover{
+  opacity:.9;
+}
+
+/* ================= PAGES ================= */
+.page{display:none}
+.page.active{display:block}
+</style>
 </head>
+
 <body>
 
-<div class="layout">
+<!-- ================= SIDEBAR ================= -->
+<div class="sidebar">
+  <div class="logo">AlinGo Ride</div>
 
-  <!-- SIDE MENU -->
-  <aside class="sidebar">
-    <h1 class="logo">AlinGo</h1>
-    <ul>
-      <li onclick="go('index.html')">Home</li>
-      <li onclick="go('ride.html')">Book Ride</li>
-      <li onclick="go('profile.html')">Profile</li>
-      <li onclick="logout()">Logout</li>
-    </ul>
-  </aside>
+  <div class="menu">
+    <a href="#" class="active" onclick="openPage('home')">Home</a>
+    <a href="#" onclick="openPage('ride')">Book Ride</a>
+    <a href="#" onclick="openPage('food')">Food</a>
+    <a href="#" onclick="openPage('hotel')">Hotel</a>
+    <a href="#" onclick="openPage('ticket')">Tickets</a>
+    <a href="#" onclick="openPage('wallet')">Wallet</a>
+    <a href="#" onclick="openPage('support')">Support</a>
+  </div>
+</div>
 
-  <!-- MAIN -->
-  <main class="main">
-    <header class="topbar">
-      <h2>Move smart with AlinGo 🚗</h2>
-    </header>
+<!-- ================= MAIN ================= -->
+<div class="main">
 
-    <!-- HERO -->
-    <section class="hero">
-      <h3>Your city. Your ride.</h3>
-      <p>European-style comfort with local power</p>
-      <button onclick="go('ride.html')">Book a Ride</button>
-    </section>
+  <div class="header">
+    <h2>Welcome 👋</h2>
+    <div class="profile">
+      Logged in as <strong id="userPhone">+92*********</strong>
+    </div>
+  </div>
 
-    <!-- SERVICES -->
-    <section class="services">
-      <div class="card" onclick="go('ride.html')">🚕 Ride</div>
-      <div class="card">📦 Logistics</div>
-      <div class="card">🏨 Hotels</div>
-      <div class="card">🎫 Tickets</div>
-      <div class="card">🍔 Food</div>
-      <div class="card">💳 Wallet</div>
-    </section>
-  </main>
+  <!-- HOME -->
+  <div id="home" class="page active">
+    <div class="hero">
+      <h1>Move Smart. Move Green.</h1>
+      <p>European-style ride experience with local trust</p>
+    </div>
+
+    <div class="services">
+      <div class="card">
+        <h3>🚗 Ride</h3>
+        <p>Fast, affordable & eco rides</p>
+        <button onclick="openPage('ride')">Book Ride</button>
+      </div>
+
+      <div class="card">
+        <h3>🍔 Food</h3>
+        <p>Order from nearby restaurants</p>
+        <button onclick="openPage('food')">Order Food</button>
+      </div>
+
+      <div class="card">
+        <h3>🏨 Hotel</h3>
+        <p>Book hotels at best prices</p>
+        <button onclick="openPage('hotel')">Book Hotel</button>
+      </div>
+
+      <div class="card">
+        <h3>🎫 Tickets</h3>
+        <p>Bus, Train & Events</p>
+        <button onclick="openPage('ticket')">Buy Tickets</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- RIDE PAGE -->
+  <div id="ride" class="page">
+    <h2>Book a Ride</h2>
+    <p>Pickup & drop booking will be here</p>
+  </div>
+
+  <div id="food" class="page"><h2>Food Module</h2></div>
+  <div id="hotel" class="page"><h2>Hotel Booking</h2></div>
+  <div id="ticket" class="page"><h2>Ticketing</h2></div>
+  <div id="wallet" class="page"><h2>Wallet & Payments</h2></div>
+  <div id="support" class="page"><h2>Help & Support</h2></div>
 
 </div>
 
-<script src="js/app.js"></script>
+<script>
+function openPage(id){
+  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+
+  document.querySelectorAll(".menu a").forEach(a=>a.classList.remove("active"));
+  event.target.classList.add("active");
+}
+</script>
+
 </body>
 </html>
