--- a/public/index.html
+++ b/public/index.html
@@ -1,217 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AlinGo Ride</title>
 
 <style>
 :root{
-  --dark-blue:#0b1c2d;
+  --indigo:#1a237e;
+  --indigo-dark:#0d1440;
   --green:#2ecc71;
-  --light:#f4f6f8;
+  --bg:#f5f7fa;
 }
 
-*{box-sizing:border-box;margin:0;padding:0}
+*{margin:0;padding:0;box-sizing:border-box}
 
 body{
-  font-family: "Segoe UI", system-ui, sans-serif;
-  background:var(--light);
-  display:flex;
+  font-family: system-ui, Arial, sans-serif;
+  background:var(--bg);
 }
 
-/* ================= SIDEBAR ================= */
-.sidebar{
-  width:240px;
-  background:var(--dark-blue);
+/* ===== HEADER ===== */
+.header{
+  background:var(--indigo);
   color:#fff;
-  height:100vh;
-  padding:20px;
+  padding:14px;
+  display:flex;
+  align-items:center;
+  gap:15px;
+}
+
+.menu-btn{
+  font-size:24px;
+  cursor:pointer;
 }
 
 .logo{
-  font-size:24px;
-  font-weight:700;
-  color:var(--green);
+  height:38px;
+}
+
+/* ===== SIDEBAR ===== */
+.sidebar{
+  position:fixed;
+  top:0;
+  left:-260px;
+  width:260px;
+  height:100%;
+  background:var(--indigo-dark);
+  color:#fff;
+  transition:.3s;
+  padding:20px;
+  z-index:10;
+}
+
+.sidebar.active{left:0}
+
+.sidebar img{
+  width:120px;
   margin-bottom:30px;
 }
 
-.menu a{
+.sidebar a{
   display:block;
-  padding:14px 12px;
-  margin-bottom:10px;
-  border-radius:8px;
+  padding:14px;
   color:#fff;
   text-decoration:none;
-  transition:.2s;
-}
-
-.menu a:hover,
-.menu a.active{
-  background:var(--green);
-  color:#0b1c2d;
-}
-
-/* ================= MAIN ================= */
-.main{
-  flex:1;
-  padding:30px;
-}
-
-.header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:30px;
-}
-
-.profile{
-  background:#fff;
-  padding:12px 18px;
-  border-radius:10px;
-  box-shadow:0 5px 15px rgba(0,0,0,.08);
-}
-
-/* ================= HOME ================= */
-.hero{
-  background:linear-gradient(135deg,var(--dark-blue),#122c46);
-  color:#fff;
-  padding:40px;
-  border-radius:18px;
-  margin-bottom:30px;
-}
-
-.hero h1{
-  font-size:36px;
+  border-radius:8px;
   margin-bottom:10px;
 }
 
-.hero p{
-  opacity:.9;
+.sidebar a:hover{
+  background:var(--green);
+  color:#0d1440;
 }
 
-/* ================= SERVICES ================= */
-.services{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
+/* ===== MAIN ===== */
+.main{
+  padding:20px;
 }
 
+.page{display:none}
+.page.active{display:block}
+
+/* ===== CARDS ===== */
 .card{
   background:#fff;
-  padding:25px;
+  padding:20px;
   border-radius:16px;
-  box-shadow:0 8px 20px rgba(0,0,0,.08);
-}
-
-.card h3{
-  margin-bottom:10px;
+  margin-bottom:20px;
+  box-shadow:0 6px 18px rgba(0,0,0,.1);
 }
 
 .card button{
-  margin-top:15px;
+  margin-top:12px;
   width:100%;
-  padding:12px;
+  padding:14px;
   border:none;
-  border-radius:8px;
+  border-radius:10px;
   background:var(--green);
   font-size:16px;
   font-weight:600;
   cursor:pointer;
 }
 
-.card button:hover{
-  opacity:.9;
-}
-
-/* ================= PAGES ================= */
-.page{display:none}
-.page.active{display:block}
+.card button:hover{opacity:.9}
 </style>
 </head>
 
 <body>
 
-<!-- ================= SIDEBAR ================= -->
-<div class="sidebar">
-  <div class="logo">AlinGo Ride</div>
+<!-- ===== SIDEBAR ===== -->
+<div class="sidebar" id="sidebar">
+  <img src="LOGO.JPG" alt="Logo">
 
-  <div class="menu">
-    <a href="#" class="active" onclick="openPage('home')">Home</a>
-    <a href="#" onclick="openPage('ride')">Book Ride</a>
-    <a href="#" onclick="openPage('food')">Food</a>
-    <a href="#" onclick="openPage('hotel')">Hotel</a>
-    <a href="#" onclick="openPage('ticket')">Tickets</a>
-    <a href="#" onclick="openPage('wallet')">Wallet</a>
-    <a href="#" onclick="openPage('support')">Support</a>
-  </div>
+  <a onclick="openPage('home')">🏠 Home</a>
+  <a onclick="openPage('ride')">🚗 Ride</a>
+  <a onclick="openPage('food')">🍔 Food</a>
+  <a onclick="openPage('hotel')">🏨 Hotel</a>
+  <a onclick="openPage('ticket')">🎫 Tickets</a>
+  <a onclick="openPage('wallet')">💳 Wallet</a>
+  <a onclick="openPage('support')">🆘 Support</a>
 </div>
 
-<!-- ================= MAIN ================= -->
-<div class="main">
+<!-- ===== HEADER ===== -->
+<div class="header">
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+  <img src="LOGO.JPG" class="logo">
+  <h3>AlinGo Ride</h3>
+</div>
 
-  <div class="header">
-    <h2>Welcome 👋</h2>
-    <div class="profile">
-      Logged in as <strong id="userPhone">+92*********</strong>
-    </div>
-  </div>
+<!-- ===== MAIN ===== -->
+<div class="main">
 
   <!-- HOME -->
   <div id="home" class="page active">
-    <div class="hero">
-      <h1>Move Smart. Move Green.</h1>
-      <p>European-style ride experience with local trust</p>
+    <div class="card">
+      <h2>Ride with Confidence</h2>
+      <p>Indrive-style freedom & transparency</p>
+      <button onclick="openPage('ride')">Book Ride</button>
     </div>
 
-    <div class="services">
-      <div class="card">
-        <h3>🚗 Ride</h3>
-        <p>Fast, affordable & eco rides</p>
-        <button onclick="openPage('ride')">Book Ride</button>
-      </div>
-
-      <div class="card">
-        <h3>🍔 Food</h3>
-        <p>Order from nearby restaurants</p>
-        <button onclick="openPage('food')">Order Food</button>
-      </div>
-
-      <div class="card">
-        <h3>🏨 Hotel</h3>
-        <p>Book hotels at best prices</p>
-        <button onclick="openPage('hotel')">Book Hotel</button>
-      </div>
-
-      <div class="card">
-        <h3>🎫 Tickets</h3>
-        <p>Bus, Train & Events</p>
-        <button onclick="openPage('ticket')">Buy Tickets</button>
-      </div>
+    <div class="card">
+      <h2>Order Food</h2>
+      <button onclick="openPage('food')">Order Now</button>
     </div>
   </div>
 
-  <!-- RIDE PAGE -->
+  <!-- RIDE -->
   <div id="ride" class="page">
-    <h2>Book a Ride</h2>
-    <p>Pickup & drop booking will be here</p>
+    <div class="card">
+      <h2>Book a Ride</h2>
+      <input placeholder="Pickup Location"><br><br>
+      <input placeholder="Drop Location">
+      <button onclick="alert('Ride Request Sent')">Request Ride</button>
+    </div>
   </div>
 
-  <div id="food" class="page"><h2>Food Module</h2></div>
-  <div id="hotel" class="page"><h2>Hotel Booking</h2></div>
-  <div id="ticket" class="page"><h2>Ticketing</h2></div>
-  <div id="wallet" class="page"><h2>Wallet & Payments</h2></div>
-  <div id="support" class="page"><h2>Help & Support</h2></div>
+  <div id="food" class="page">
+    <div class="card"><h2>Food Module</h2></div>
+  </div>
+
+  <div id="hotel" class="page">
+    <div class="card"><h2>Hotel Booking</h2></div>
+  </div>
+
+  <div id="ticket" class="page">
+    <div class="card"><h2>Ticketing</h2></div>
+  </div>
+
+  <div id="wallet" class="page">
+    <div class="card"><h2>Wallet & Payments</h2></div>
+  </div>
+
+  <div id="support" class="page">
+    <div class="card"><h2>Help & Support</h2></div>
+  </div>
 
 </div>
 
 <script>
+function toggleMenu(){
+  document.getElementById("sidebar").classList.toggle("active");
+}
+
 function openPage(id){
   document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
   document.getElementById(id).classList.add("active");
-
-  document.querySelectorAll(".menu a").forEach(a=>a.classList.remove("active"));
-  event.target.classList.add("active");
+  toggleMenu();
 }
 </script>
 
