--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@ input{
   <a onclick="openPage('ticket')">🎫 Tickets</a>
   <a onclick="openPage('wallet')">💳 Wallet</a>
   <a onclick="openPage('support')">🆘 Support</a>
+  <a onclick="openPage('Investor')"> Investor</a>
   <a onclick="logout()" style="color: #ff4d4d;">🚪 Logout</a>
 </div>
 
