--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,8 @@ input{
 
 <div class="sidebar" id="sidebar">
   <img src="LOGO.JPG" alt="Logo">
-
+  <div class="close-btn" onclick="toggleMenu()">&times;</div> 
+  
   <a onclick="openPage('home')">🏠 Home</a>
   <a onclick="openPage('ride')">🚗 Ride</a>
   <a onclick="openPage('food')">🍔 Food</a>
