--- a/public/index.html
+++ b/public/index.html
@@ -128,8 +128,7 @@ input{
 <body>
 
 <div class="sidebar" id="sidebar">
-  <img src="LOGO.JPG" alt="Logo">
-  <div class="close-btn" onclick="toggleMenu()">&times;</div> 
+  <div class="close-btn" onclick="toggleMenu()">&times;</div> <img src="LOGO.JPG" alt="Logo">
   
   <a onclick="openPage('home')">🏠 Home</a>
   <a onclick="openPage('ride')">🚗 Ride</a>
